// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoVTD gAnUDO"
>
  <li
    className="sc-fzpisO evnltB"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpisO evnltB"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpisO evnltB"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoVTD gAnUDO"
>
  <li
    className="sc-fzpisO hvGMBh"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpisO hvGMBh"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpisO hvGMBh"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
